<resources>
    <string name="app_name">StressApp</string>
    <string-array name="Themes">
        <item>Dark Theme</item>
        <item>Red Theme</item>
    </string-array>
    <string name="options">Options</string>
    <string name="confirm">Confirm</string>
    <string name="TitleCard">Lose The Stress</string>
    <string name="DevGenerateTable">Generate Database Values</string>
    <string name="DevButton">Developer</string>
    <string name="settings">Settings</string>
    <string name="Home">Home</string>
    <string name="Input">Input</string>
    <string name="Graphs">Graphs</string>
    <string name="Distractions">Distractions</string>
    <string name="profile">Profile</string>
    <string name="graphtitletitle">Choose Which Type of Data to See Graphed</string>
    <string name="EatingGraphTitle">Calorie Data</string>
    <string name="DailyEatingBlurbFirst">You have taken in\u0020</string>
    <string name="DailyEatingBlurbSecond">\u0020calories on\u0020</string>
    <string name="NullEating">You have not put any data in for today!</string>
    <string name="EatWeek">Calories Over the Last 7 Days</string>
    <string name="EatMonth">Calories Over the Month</string>
    <string name="SleepGraphTitle">Sleep Data</string>
    <string name="DailySleepBlurbFirst">You have slept\u0020</string>
    <string name="DailySleepBlurbSecond">\u0020hours on\u0020</string>
    <string name="NullSleep">You have not put any data in for today!</string>
    <string name="SleepWeek">Sleep Hours Over the Last 7 Days</string>
    <string name="SleepMonth">Sleep Hours Over the Month</string>
    <string name="ExcerciseGraphTitle">Exercise Data</string>
    <string name="DailyExcerciseBlurbFirst">You have exercised\u0020</string>
    <string name="DailyExcerciseBlurbSecond">\u0020hours on\u0020</string>
    <string name="NullExcercise">You have not put any data in for today!</string>
    <string name="ExcerciseWeek">Exercise Hours Over the Last 7 Days</string>
    <string name="ExcerciseMonth">Exercise Hours Over the Month</string>
    <string name="FinanceGraphTitle">Finance Data</string>
    <string name="DailyFinanceBlurbFirst">You have spent\u0020$</string>
    <string name="DailyFinanceBlurbSecond">\u0020on\u0020</string>
    <string name="NullFinance">You have not put any data in for today!</string>
    <string name="FinanceWeek">$$$ Spent Over the Last 7 Days</string>
    <string name="FinanceMonth">$$$ Spent Over the Month</string>
    <string name="SocialGraphTitle">Social Data</string>
    <string name="DailySocialBlurbFirst">You have socialized\u0020</string>
    <string name="DailySocialBlurbSecond">\u0020hours on\u0020</string>
    <string name="NullSocial">You have not put any data in for today!</string>
    <string name="SocialWeek">Social Hours Over the Last 7 Days</string>
    <string name="SocialMonth">Social Hours Over the Month</string>
    <string name="SocialWeek2">Unique Interactions Over the Last 7 Days</string>
    <string name="SocialMonth2">Unique Interactions Over the Month</string>
    <string name="MoodGraphTitle">Mood Data</string>
    <string name="DailyMoodBlurbFirst">You have felt\u0020</string>
    <string name="DailyMoodBlurbSecond">\u0020 on\u0020</string>
    <string name="NullMood">You have not put any data in for today!</string>
    <string name="MoodWeek">Mood Over the Last 7 Days</string>
    <string name="MoodMonth">Mood Over the Month</string>
    <string name="inputtitletitle">Choose Which Type of Data to Input</string>
    <string name="eating">Eating Habits</string>
    <string name="sleeping">Sleeping Habits</string>
    <string name="exercise">Exercise</string>
    <string name="social">Social Interaction</string>
    <string name="finances">Finances</string>
    <string name="mental">Mental Health</string>
    <string name="back">Back</string>
    <string name="TitleEating">Enter How Many Calories You Took in Today</string>
    <string name="DefaultEating">0</string>
    <string name="DefaultDouble">0.00</string>
    <string name="Breakfast">Breakfast:\u0020</string>
    <string name="Lunch">Lunch:\u0020</string>
    <string name="Dinner">Dinner:\u0020</string>
    <string name="TitleSleeping">Enter When You Awoke and Slept</string>
    <string name="DefaultSleeping">8:00</string>
    <string name="DefaultWaking">6:00</string>
    <string name="Woke_Up">Woke Up</string>
    <string name="Slept">Bed Time</string>
    <string name="am">a.m.</string>
    <string name="pm">p.m.</string>
    <string name="TitleExercise">Enter How Many Hours or Minutes You Exercised Today</string>
    <string name="Hours">Hours:\u0020</string>
    <string name="Mins">Minutes:\u0020</string>
    <string name="SubExcerciseHeading">Hour and minute input exceeding 24 or 59 respectively will be rounded down</string>
    <string name="TitleSocial">Enter How Many Hours or Minutes You Spoke With Someone Today</string>
    <string name="HowManyPeople"># of Unique Interactions:\u0020</string>
    <string name="TitleFinance">Enter How Much You Spent Today</string>
    <string name="HowMuchDough">Money Spent:\u0020</string>
    <string name="SubFinancesHeading">Any decimal place beyond the 0.00 will be rounded</string>
    <string name="TitleMental">How Are You Feeling Today?</string>
    <string name="distractiontitletitle">Which Distraction Do You Need?</string>
    <string name="bubbles">Bubble Pop</string>
    <string name="ambient">Ambient Sounds</string>
    <string name="math_button">Simple Math</string>
    <string name="ambient_title">What Type of Sounds Would You Like To Listen To?</string>
    <string name="waves">Ocean Waves</string>
    <string name="chimes">Wind Chimes</string>
    <string name="fire">Fireplace</string>
    <string name="math_title">Math Problem</string>
    <string name="math_heading">Here Are Some Simple Math Problems</string>
    <string name="math_hint">Put Your Answer Here</string>
    <string name="answer_button">Check Answer</string>
    <string name="correct">Congrats! You Got It Right!</string>
    <string name="wrong">Sorry, You Got It Wrong. The Answer Was: </string>
    <string name="exercise_button">Exercise</string>
    <string name="exercise_title">Choose One Of The Exercises/Healthy Activities Below!</string>
    <string name="exercise1">Exercise 1</string>
    <string name="exercise2">Exercise 2</string>
    <string name="exercise3">Exercise 3</string>
    <string name="exercise_cheer">Way to Go!</string>
    <string name="encouragements_button">Encouragement</string>
    <string name="encourage_text">Encourage Text</string>
    <string name="profile_title">Profile</string>
    <string name="profile_hint">Insert Name Here</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="greeting">Welcome back</string>
    <string name="excite">!</string>
    <string name="success">Successfully stored your profile!</string>
    <string name="path">/Android/data/com.example.stressapp/</string>
    <string name="find_fail">Failed to find image file to display</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>