<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".InputDataInput">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/InputTitleTextInput"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/MediumTextTitle"
            android:text="@string/TitleSleeping"/>

        <Button
            android:id="@+id/ButtonforWake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/InputTitleTextInput"
            android:layout_toLeftOf="@id/CenterForHorz"
            style="@style/MediumTextTitle"
            android:text="@string/Woke_Up"
            android:onClick="showTimePickerDialog"
            />

        <View
            android:id="@+id/CenterForHorz"
            android:layout_centerHorizontal="true"
            android:layout_width="0sp"
            android:layout_height="0sp"/>

        <Button
            android:id="@+id/ButtonforSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/InputTitleTextInput"
            android:layout_toEndOf="@id/CenterForHorz"
            style="@style/MediumTextTitle"
            android:text="@string/Slept"
            android:onClick="showTimePickerDialog"
            />






    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>